# aoc22

./: .gitignore  aoc22.cabal  flake.nix
exe/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs
src/AOC/: HuetTree.hs  Utils.hs
