cabal-version:      3.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
    default-extensions:  ImportQualifiedPost
    
common exe
    import:            lang
    build-depends:     base >= 4.16.0,
                       bytestring
    hs-source-dirs:    exe

executable day1
    import:  exe
    main-is: Day1.hs

--executable free-monad
--    main-is:          Main.hs
--
--    -- Modules included in this executable, other than Main.
--    -- other-modules:
--
--    -- LANGUAGE extensions used by modules in this package.
--    -- other-extensions:
--    build-depends:    base ^>=4.14.3.0
--    hs-source-dirs:   app
--    default-language: Haskell2010
--
