cabal-version:      3.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Ramiro S. Garay

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

data-files: inputs/*.txt

common lang
    default-extensions:  ImportQualifiedPost
                         OverloadedStrings
                         ViewPatterns
                         NamedFieldPuns
                         RankNTypes
                         ScopedTypeVariables
                         DeriveFunctor
                         DeriveFoldable
                         LambdaCase
                         NumericUnderscores
    ghc-options:         -Wall

common deps
    build-depends:     base >= 4.16.0,
                       bytestring,
                       attoparsec,
                       containers
    other-modules:     Paths_aoc22
    autogen-modules:   Paths_aoc22
   
common exe
    import:            lang, deps
    build-depends:     aoc22
    hs-source-dirs:    exe

common lib
    import:            lang, deps
    hs-source-dirs:    src

library
    import:            lib
    exposed-modules:   AOC.Utils
                       AOC.HuetTree

executable day1
    import:  exe
    main-is: Day1.hs

executable day2
    import:  exe
    main-is: Day2.hs

executable day3
    import:  exe
    main-is: Day3.hs

executable day4
    import:  exe
    main-is: Day4.hs

executable day5
    import:  exe
    main-is: Day5.hs

executable day6
    import:  exe
    main-is: Day6.hs

executable day7
    import:  exe
    main-is: Day7.hs

executable day8
    import:  exe
    main-is: Day8.hs
